script source fixed

--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </footer>
     </section>
     <script src="/node_modules/vue/dist/vue.js"></script>
-  <script src="app.js"></script>
+  <script src="web/app.js"></script>
 </body>
 </html>
